<?xml version="1.0" encoding="utf-8"?>
<resources>
     <string name="connection">Please check your connectivity</string>
    <string name="app_name">Event Photos</string>
    <string name="qr_code_title">Join event with this code</string>
    <string name="button_group_management">Group management</string>
    <string name="button_join_to_group">Join to group</string>
    <string name="button_group_Settings">Group settings</string>
    <string name="button_create_a_group">Create a group</string>
    <string name="button_delete_group">Delete group</string>
    <string name="text_create_group">Greate group</string>
    <string name="text_group_name">Group name:</string>
    <string name="text_group_duration">Group duration:</string>
    <string name="button_create">Create</string>
    <string name="text_minutes">minutes</string>
    <string name="button_show_QR">Show QR-code</string>

</resources>